# poincare

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  RUST_IMPLEMENTATION.md  RUST_STATUS.md
.claude/: settings.local.json
core/python/: pyproject.toml
core/python/poincare/: __init__.py
core/rust/: Cargo.toml
core/rust/src/: lib.rs
docs/: README.md  _config.yml  index.html
docs/css/: style.css
docs/genome/: nucleic-acid-computing.tex
docs/ideal-gas/: gas-captions.tex  ideal-gas-laws.tex  references.bib  regenerate_panels.py
docs/ideal-gas/sections/: bounded-systems.tex  categorical-compiler.tex  categorical-dynamics.tex  categorical-entropy.tex  categorical-memory.tex  complexity.tex  enthalpy.tex  exhaustive-computing.tex  finite-space.tex  ideal-gas-law.tex  identity-unification.tex  initial-state.tex  internal-energy.tex  maxwell-distribution.tex  oscillatory-entropy.tex  partition-entropy.tex  poincares-machine-completeness.tex  pressure.tex  solution-trajectory.tex  st-stellas-thermodynamics.tex  temperature.tex  ternary-representation.tex  trajectory-completion.tex  virtual-instrument.tex
docs/mass-computing/: mass-computing-framework.tex  references.bib
docs/mass-computing/figures/: fragmentation_panels_summary.json  ion_representation_summary.json  mass-computing-framework.bcf  mass-computing-framework.run.xml  mass-computing-framework.tex  references.bib  simion_comparison_summary.json  validation_summary.json
docs/mass-computing/src/: circular_cv_validation.py  generate_figures.py  generate_fragmentation_panels.py  generate_ion_representation_panels.py  generate_ms_instrument_panels.py  generate_simion_comparison.py  massscript.py  pipeline.py  ternary_core.py  validation.py
docs/mass-spec/: partitioning-lagrange.tex
docs/paradoxes/: loschmidt-paradox.tex
docs/partitioning-limits/: ANALYZER_ENTROPY_REPORT.txt  EXPERIMENTAL_VALIDATION_REPORT.txt  analyzer_entropy_summary.json  analyzer_entropy_validation.py  depth.tex  experimental_validation.json  generate_figures.py  partition-depth-limits.tex  partition_experiments.py  partitioning-captions.tex  references.bib
docs/partitioning-limits/figures/: highlights.txt
docs/poincare-computing/: poincare-categorical-computing.tex  references.bib
docs/poincare-computing/figures/: catalytic_programming_results.json
docs/poincare-computing/sections/: categorical-compiler.tex  categorical-dynamics.tex  complexity.tex  exhaustive-computing.tex  finite-space.tex  identity-unification.tex  initial-state.tex  poincares-machine-completeness.tex  solution-trajectory.tex  st-stellas-thermodynamics.tex  virtual-instrument.tex
docs/scattering-puzzle/: captions.tex  references.bib
docs/scattering-puzzle/experiments/: generate_rpi_panels.py  rpi_validation.py
docs/st-stellas-epistemology/: references.bib  st-stellas-post-explanatory-epistemology.tex
docs/st-stellas-epistemology/sections/: categorical-memory.tex  decoupling-of-solution-explanation.tex  (+12 more)
examples/program_synthesis/: EXTENDED_RESULTS_SUMMARY.md  README.md  RESULTS_SUMMARY.md  generate_visualizations.py  synthesis_core.py  synthesis_extended.py  validate_extended.py  validate_synthesis.py
publication/: EXPERIMENTAL_ADDITIONS.md  backward-trajectory-completion.tex  poincare-trajectory-computing.tex
publication/backward-trajectory/: backward-trajectory-completion.tex
publication/backward-trajectory-completion/: README.md  VALIDATION.md  backward-trajectory-completion.tex  references.bib
publication/poincare-computing/: poincare-computing.bib  poincare-trajectory-computing.tex
publication/principia/: principles-of-trajectory-completion.tex  references.bib
src/: core.rs  error.rs  lib.rs  library.rs  navigator.rs  observer.rs  operations.rs
validation/: INDEX.md  README.md  RESULTS_SUMMARY.md  VALIDATION_COMPLETE.md  VALIDATION_REPORT.md  experiment_1_clean.py  experiment_1_random_guess_paradox.py  experiment_2_clean.py  experiment_2_type_theory.py  experiment_3_clean.py  experiment_3_complexity_scaling.py  results_experiment_1.txt  results_experiment_1_FINAL.txt  results_experiment_2.txt  results_experiment_2_FINAL.txt  results_experiment_3.txt  results_experiment_3_FINAL.txt  run_all_validations.py  run_experiments_and_save_results.py
(+31 files in other folders)
