[package]
name = "poincare"
version = "0.1.0"
edition = "2021"
authors = ["Poincaré Computing Project"]
license = "MIT"
description = "Backward trajectory completion for program synthesis via S-entropy space navigation"
repository = "https://github.com/fullscreen-triangle/poincare"
keywords = ["program-synthesis", "poincare", "entropy", "backward-navigation"]
categories = ["algorithms", "science"]

[lib]
name = "poincare"
path = "src/lib.rs"

[[bin]]
name = "poincare-synth"
path = "src/bin/synth.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Math and numerics
num-traits = "0.2"
ordered-float = "4.2"

# Performance
rayon = "1.8"  # Parallel iteration
smallvec = "1.11"  # Stack-allocated vectors

# Optional features
clap = { version = "4.5", features = ["derive"], optional = true }
csv = { version = "1.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"

[features]
default = ["cli"]
cli = ["clap", "csv"]
bench = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
inherits = "release"
