[package]
name = "poincare-core"
version = "0.1.0"
edition = "2021"
authors = ["Poincaré Computing Contributors"]
license = "MIT"
description = "Core framework for Poincaré computing: backward trajectory completion in bounded phase space"
repository = "https://github.com/fullscreen-triangle/poincare"
keywords = ["poincare", "partition", "trajectory", "entropy", "computing"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Numerical computations
num-traits = "0.2"
ndarray = "0.15"

# Performance
rayon = "1.8"  # Parallel iterators
ahash = "0.8"  # Fast hashing for memoization

[dev-dependencies]
criterion = "0.5"  # Benchmarking
proptest = "1.4"   # Property-based testing
approx = "0.5"     # Floating-point comparisons

[[bench]]
name = "navigation"
harness = false

[[bench]]
name = "addressing"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
